[package]
name = "heltec-wireless-stick"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0.0", features = ["esp32"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
log = "0.4"

[profile.dev]
opt-level = "s"
lto = "off"

[profile.release]
opt-level = "s"
lto = "off"
codegen-units = 1
debug = 2
